@@ -79,13 +79,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   * HTTP protocol: Add "DefaultType none" option.
-     PR 13986 and PR 16139
-     http://svn.apache.org/viewvc?view=rev&revision=579991 (code)
-     http://svn.apache.org/viewvc?view=rev&revision=580502 (docs)
-     http://svn.apache.org/viewvc?view=rev&revision=584842 (docs)
-     +1: niq, rpluem, jim
-     
    * Core: Fix possible crash at startup in case of nonexistent DocumentRoot.
      PR 39722
      http://svn.apache.org/viewvc?view=rev&revision=589177
